# fleurs_asr_experiment

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: languages.yaml  models.yaml
configs/experiments/: whisper_finetune.yaml  whisper_zero_shot.yaml
data/: README.md
notebooks/: README.md
reports/: README.md
results/: README.md
results/metrics/: yo_ng_test_openai--whisper-tiny_20260625_183957.json  yo_ng_test_openai--whisper-tiny_20260625_184814.json  yo_ng_test_openai--whisper-tiny_20260626_170939.json
scripts/: analyze_errors.py  evaluate_asr.py  inspect_dataset.py  list_fleurs_languages.py  run_zero_shot.py  train_asr.py
src/fleurs_asr/: __init__.py  data.py  decoding.py  error_analysis.py  evaluation.py  models.py  reporting.py  text_normalization.py  utils.py
tests/: test_data_loading.py  test_error_analysis.py  test_evaluation.py  test_reporting.py  test_text_normalization.py
